<resources>
    <string name="app_name">My Wallet</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key_ether">QVK4XE2W1H2VM9RXU22FMDYWHJUA5X5FKA</string>

    <!---->
    <string name="address_receive">Address receive</string>
    <string name="next">Next</string>
    <string name="no_camera_permission">need allow access camera</string>
    <string name="scan_instructions">Center a QR code inside the frame.</string>
    <string name="Send">Send</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>

    <!--setting title-->
    <string name="select_account">Select account</string>
    <string name="select_platform">Select platform</string>
    <string name="network">Change Network</string>
    <string name="require_password">Require password</string>
    <string name="require_pass_des">Require password when send transaction</string>
    <string name="contract"></string>
    <string name="about">About us</string>
    <string name="setting">Setting</string>


    <!--key setting preference -->
    <string name="account_select_eth_key">account_select_eth_key</string>
    <string name="account_select_ste_key">account_select_ste_key</string>
    <string name="network_key_eth">network_key_ethereum</string>
    <string name="network_key_ste">network_key_stellar</string>
    <string name="create_account">Create new account</string>
    <string name="import_account">Import account</string>
    <string name="add_wallet">Add account</string>
    <string name="input_pass">password account</string>
    <string name="cancel">Cancel</string>
    <string name="no_input_password">Please input password</string>
    <string name="create">Create</string>
    <string name="create_completed">Create completed</string>
    <string name="export_account">Export account</string>
    <string name="export">Export</string>
    <string name="hint_pass_export">Password export</string>
    <string name="keystore">Keystore</string>
    <string name="password">Password</string>
    <string name="password_restore">Password restore</string>
    <string name="not_empty">Must not be empty!</string>
    <string name="import_completed">Import account completed!</string>
    <string name="select_account_just_imported">Do you want select account just has imported?</string>
    <string name="yes">Yes</string>
    <string name="password_export">Export password</string>
    <string name="current_price">Current price</string>
    <string name="sending_transaction">Sending transaction</string>
    <string name="send_transaction_completed">Send transaction completed!</string>
    <string name="notify">Notify</string>
    <string name="address_not_empty">Address target not empty</string>
    <string name="error">Error</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount %s</string>
    <string name="amount_ether">%d Ether</string>
    <string name="nonce">Nonce</string>
    <string name="time">Time</string>
    <string name="blockNumber">Block number</string>
    <string name="transaction_time">Transaction time</string>
    <string name="gas_use">Gas used</string>
    <string name="no_account">No account, please create or import account!</string>
    <string name="show_option">Show option</string>
    <string name="gasPrice">Gas Price:</string>
    <string name="gasLimit">Gas Limit:</string>
    <string name="input_pass_account">Please input password of your account</string>
    <string name="hide_option">Hide option</string>
    <string name="transaction_detail">Transaction detail</string>
    <string name="ok">Ok</string>
    <string name="send_ether">Send %s ETH</string>
    <string name="receive_ether">Receive %s ETH</string>
    <string name="new_password_account">New password</string>
    <string name="privateKey">Private key</string>
    <string name="import_account_by_keystore">Import account by keystore</string>
    <string name="import_account_by_private_key">Import account by private key</string>
    <string name="change_import">Change import</string>
    <string name="add_token_title">Add Token</string>
    <string name="address">Address</string>
    <string name="symbol">Symbol</string>
    <string name="decimals">Decimals</string>
    <string name="contract_address">Contract address</string>
    <string name="save">Save</string>
    <string name="update_completed">Update account completed</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete address !</string>
    <string name="delete_account_complete">Delete account completed!</string>
    <string name="Error">Error!</string>
    <string name="manage_account">Manage accounts</string>
    <string name="select_account_completed">Select account completed</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="field_require">This field is required</string>
    <string name="send_token">Send Token</string>
    <string name="send_transaction">Send transaction</string>
    <string name="add_token_completed">Add token completed</string>
    <string name="add_token_fail">Add token fail!</string>
    <string name="my_balance_account">My  account balance</string>
    <string name="current_balance">My balance</string>
    <string name="want_delete_token">Are you want delete this token?</string>
    <string name="socket_timeout">Connect timeout</string>
    <string name="stellar">Stellar</string>
    <string name="ethereum">Ethereum</string>
    <string name="main_net">Main net</string>
    <string name="test_net">Test net</string>
    <string name="blockChainPlatform">Platform</string>
    <string name="kovan_network">Kovan(Test)</string>
    <string name="rinkeby_network">Rinkeby(Test)</string>
    <string name="ropsten_network">Ropsten(Test)</string>
    <string name="transactions">Transactions</string>
    <string name="balance">Balance</string>
    <string name="transactions_history">Transaction history</string>
    <string name="account">Account</string>
    <string name="receive">Receive</string>
    <string name="my_account">My account</string>
    <string name="price">Price</string>
    <string name="accounts">List accounts</string>
</resources>

