<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item android:title="@string/blockChainPlatform">
            <menu>
                <item
                    android:id="@+id/stellar"
                    android:title="@string/stellar"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/ethereum"
                    android:title="@string/ethereum"
                    app:showAsAction="ifRoom"/>
            </menu>
        </item>
    </group>
    <group android:id="@+id/group_two"
        android:checkableBehavior="single">
        <item android:title="@string/network">
            <menu>
                <item
                    android:id="@+id/ethereum_main_net"
                    android:title="@string/ethereum"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/kovan"
                    android:title="@string/kovan_network"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/rinkeby"
                    android:title="@string/rinkeby_network"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/ropsten"
                    android:title="@string/ropsten_network"
                    app:showAsAction="ifRoom"/>

            </menu>
        </item>
    </group>
    <group>
        <item android:id="@+id/setting"
            android:title="@string/setting"
            app:showAsAction="ifRoom"/>
    </group>
</menu>