<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
       >
        <item
            android:id="@+id/my_account"
            android:checked="true"
            android:icon="@drawable/ic_account"
            android:title="@string/my_account"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/price"
            android:icon="@drawable/ic_line_chart"
            android:title="@string/price"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/manage_account"
            android:icon="@drawable/ic_list"
            android:title="@string/manage_account"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:checkableBehavior="single"
        >
        <item android:id="@+id/setting"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting"
            app:showAsAction="ifRoom"/>
    </group>
</menu>