<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.preference.ListPreference
        android:key="platform_preference"
        android:icon="@drawable/ic_blockchain"
        android:title="@string/select_platform"
        />
    <android.support.v7.preference.ListPreference
        android:title="@string/network"
        android:icon="@drawable/ic_server"
        android:key="ether_network_preference"
        />
    <android.support.v7.preference.ListPreference
        android:title="@string/network"
        android:icon="@drawable/ic_server"
        android:key="stellar_network_preference"
        />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:icon="@drawable/ic_lock"
        android:key="require_password_send"
        android:title="@string/require_password"
        android:summary="@string/require_pass_des"
        android:defaultValue="true" />
</android.support.v7.preference.PreferenceScreen>