<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar_layout" />

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/page_padding">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtDescription"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/fromTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/from"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/from"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fromTitle"
                    tools:text="0x9d60B3DE126D0cb84721956Be9AE4838BFA01211" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/toTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/to"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/from" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/to"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toTitle"
                    tools:text="0x9d60B3DE126D0cb84721956Be9AE4838BFA01211" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/amountTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/amount"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/to" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/amount"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amountTitle"
                    tools:text="10 Ether" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/nonceTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/nonce"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amount" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/nonce"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nonceTitle"
                    tools:text="0.01" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/timeTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/transaction_time"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nonce" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/time"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeTitle"
                    tools:text="19/07/2018" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/blockTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/blockNumber"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/block"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/blockTitle"
                    tools:text="3605241" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/gasTitle"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/gas_use"
                    android:textSize="@dimen/_15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/block" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/gasUsed"
                    style="@style/TextAppStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_2dp"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gasTitle"
                    tools:text="0.0000021" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.CoordinatorLayout>
</layout>